# FROG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  results.csv
old/: main_runner_mlflow.py  naive_runner.py  naive_runner_mlflow.py
src/: Run.py  Test.py  Train.py  helloworld.py  inference.py  main_runner_mlflow.py  naive_model.ipynb  naive_runner.py  naive_runner_mlflow.py  run.py  saliency.ipynb  test.py  train.py  train_mlflow.py  train_resnet.py
src/models/: MRCNN.py  MTCNN.py  RESNET.py  network.py
src/utils/: Evaluation.py  dataset.py  metrics.py  transform_loader.py
